just a few final touches on index.html :P

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <p>Instructions</p>
                 <div>
                     <div>
-                        <h2>ScoreScore: <span id="score">0</span></h2>
+                        <h2>Score: <span id="score">0</span></h2>
                         <h3>Highscore: <span id="hiscore"></span></h3>
                     </div>
                     <h2>Instructions</h2>
@@ -159,8 +159,8 @@
             </div>
             <div class='toggleMovementProjection'>
                 <input type="checkbox" onclick="projectMovement()">
-                <label class="labelMovementProjection" for="" id="onbtn">ON</label>
-                <label class="labelMovementProjection" for="" id="offbtn">OFF</label>
+                <label class="labelMovementProjection"  id="onbtn">ON</label>
+                <label class="labelMovementProjection"  id="offbtn">OFF</label>
                 <label style="font-size: 10px"><br>Toggle Knight's<br>possible moves</label>
             </div>
 
