Pawns now take on every turn.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>To skip a turn, click your knight.</p>
                     <p>Pieces will move to take your knight if they can; or randomly otherwise</p>
                     <p>Small pieces block the movement of other pieces, but big pieces don't. However, you can land on small pieces and if a big piece can't move, it dies. </p>
-                    <p>Pawns move in direction indicated and can take on forward diagonals.</p>
+                    <p>Pawns move in direction indicated <b>every two turns</b> and can take on forward diagonals in any turn.</p>
 
                     <span id="gmode-help" class="hidden">You must <button class="button" onclick="forfeitGame()">Forfeit</button> in order to change the game mode</span>
                     <fieldset class="gmode">
