refactor: extract player highlighting
Extract highlighting logic to 'player_movement_hints.js' and broken into smaller functions

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <script src="js/piece_object.js"></script>
     <script src="js/main.js"></script>
     <script src="js/dark_mode.js"></script>
+    <script src="js/player_movement_hints.js"></script>
     <script src="js/achievements_highscores.js"></script>
 
     <script src="js/dom_events.js"></script>
