refactor: remove repetition (#92)
* refactor: remove repetition

Added generation of player movement points

Simplified drawPlayerPossibleMoves function

Added a couple of helper functions:
playerCanMove
coordsTo2D
coordsTo1D

Fix #86

* refactor: reusing functions from utilities for player move logic

reusing functions from utilities in the logic of determining the validity of a player's (knight's) move

* refactor: extract player highlighting

Extract highlighting logic to 'player_movement_hints.js' and broken into smaller functions

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
 
         </div>
-        <div style="display:none">
+        <div id="assets" style="display:none">
             <!--insert images here -->
             <img style='background:white' id='bishop' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cg style="opacity:1; fill:none; fill-rule:evenodd; fill-opacity:1; stroke:%23000000; stroke-width:1.5; stroke-linecap:round; stroke-linejoin:round; stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;"%3E%3Cg style="fill:%23000000; stroke:%23000000; stroke-linecap:butt;"%3E%3Cpath d="M 9,36 C 12.39,35.03 19.11,36.43 22.5,34 C 25.89,36.43 32.61,35.03 36,36 C 36,36 37.65,36.54 39,38 C 38.32,38.97 37.35,38.99 36,38.5 C 32.61,37.53 25.89,38.96 22.5,37.5 C 19.11,38.96 12.39,37.53 9,38.5 C 7.646,38.99 6.677,38.97 6,38 C 7.354,36.06 9,36 9,36 z" /%3E%3Cpath d="M 15,32 C 17.5,34.5 27.5,34.5 30,32 C 30.5,30.5 30,30 30,30 C 30,27.5 27.5,26 27.5,26 C 33,24.5 33.5,14.5 22.5,10.5 C 11.5,14.5 12,24.5 17.5,26 C 17.5,26 15,27.5 15,30 C 15,30 14.5,30.5 15,32 z" /%3E%3Cpath d="M 25 8 A 2.5 2.5 0 1 1 20,8 A 2.5 2.5 0 1 1 25 8 z" /%3E%3C/g%3E%3Cpath d="M 17.5,26 L 27.5,26 M 15,30 L 30,30 M 22.5,15.5 L 22.5,20.5 M 20,18 L 25,18" style="fill:none; stroke:%23ffffff; stroke-linejoin:miter;" /%3E%3C/g%3E%3C/svg%3E'>
             <img style='background:white' id='king' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cg style="fill:none; fill-opacity:1; fill-rule:evenodd; stroke:%23000000; stroke-width:1.5; stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;"%3E%3Cpath d="M 22.5,11.63 L 22.5,6" style="fill:none; stroke:%23000000; stroke-linejoin:miter;" id="path6570" /%3E%3Cpath d="M 22.5,25 C 22.5,25 27,17.5 25.5,14.5 C 25.5,14.5 24.5,12 22.5,12 C 20.5,12 19.5,14.5 19.5,14.5 C 18,17.5 22.5,25 22.5,25" style="fill:%23000000;fill-opacity:1; stroke-linecap:butt; stroke-linejoin:miter;" /%3E%3Cpath d="M 11.5,37 C 17,40.5 27,40.5 32.5,37 L 32.5,30 C 32.5,30 41.5,25.5 38.5,19.5 C 34.5,13 25,16 22.5,23.5 L 22.5,27 L 22.5,23.5 C 19,16 9.5,13 6.5,19.5 C 3.5,25.5 11.5,29.5 11.5,29.5 L 11.5,37 z " style="fill:%23000000; stroke:%23000000;" /%3E%3Cpath d="M 20,8 L 25,8" style="fill:none; stroke:%23000000; stroke-linejoin:miter;" /%3E%3Cpath d="M 32,29.5 C 32,29.5 40.5,25.5 38.03,19.85 C 34.15,14 25,18 22.5,24.5 L 22.51,26.6 L 22.5,24.5 C 20,18 9.906,14 6.997,19.85 C 4.5,25.5 11.85,28.85 11.85,28.85" style="fill:none; stroke:%23ffffff;" /%3E%3Cpath d="M 11.5,30 C 17,27 27,27 32.5,30 M 11.5,33.5 C 17,30.5 27,30.5 32.5,33.5 M 11.5,37 C 17,34 27,34 32.5,37" style="fill:none; stroke:%23ffffff;" /%3E%3C/g%3E%3C/svg%3E'>
@@ -56,14 +56,6 @@
             <img style='background:white' id='up_arrow' src='images/up_arrow.svg'>
             <img style='background:white' id='down_arrow' src='images/down_arrow.svg'>
             <img style='background:white' id='wknight' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cg style="opacity:1; fill:none; fill-opacity:1; fill-rule:evenodd; stroke:%23000000; stroke-width:1.5; stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;"%3E%3Cpath d="M 22,10 C 32.5,11 38.5,18 38,39 L 15,39 C 15,30 25,32.5 23,18" style="fill:%23ffffff; stroke:%23000000;" /%3E%3Cpath d="M 24,18 C 24.38,20.91 18.45,25.37 16,27 C 13,29 13.18,31.34 11,31 C 9.958,30.06 12.41,27.96 11,28 C 10,28 11.19,29.23 10,30 C 9,30 5.997,31 6,26 C 6,24 12,14 12,14 C 12,14 13.89,12.1 14,10.5 C 13.27,9.506 13.5,8.5 13.5,7.5 C 14.5,6.5 16.5,10 16.5,10 L 18.5,10 C 18.5,10 19.28,8.008 21,7 C 22,7 22,10 22,10" style="fill:%23ffffff; stroke:%23000000;" /%3E%3Cpath d="M 9.5 25.5 A 0.5 0.5 0 1 1 8.5,25.5 A 0.5 0.5 0 1 1 9.5 25.5 z" style="fill:%23000000; stroke:%23000000;" /%3E%3Cpath d="M 15 15.5 A 0.5 1.5 0 1 1 14,15.5 A 0.5 1.5 0 1 1 15 15.5 z" transform="matrix(0.866,0.5,-0.5,0.866,9.693,-5.173)" style="fill:%23000000; stroke:%23000000;" /%3E%3C/g%3E%3C/svg%3E'>
-            <img class='movementProjection' id='mp1' src="images/MovementProjection.svg">
-            <img class='movementProjection' id='mp2' src="images/MovementProjection.svg">
-            <img class='movementProjection' id='mp3' src="images/MovementProjection.svg">
-            <img class='movementProjection' id='mp4' src="images/MovementProjection.svg">
-            <img class='movementProjection' id='mp5' src="images/MovementProjection.svg">
-            <img class='movementProjection' id='mp6' src="images/MovementProjection.svg">
-            <img class='movementProjection' id='mp7' src="images/MovementProjection.svg">
-            <img class='movementProjection' id='mp8' src="images/MovementProjection.svg">
             <!--end insert images -->
         </div>
         <div class="sidebar">
@@ -190,10 +182,12 @@
     </div>
 
     <script>document.querySelector('.dark-mode-switch input').checked = false;</script>
+    <script src="js/utils.js"></script>
     <script src="js/arcade.js"></script>
     <script src="js/piece_object.js"></script>
     <script src="js/main.js"></script>
     <script src="js/dark_mode.js"></script>
+    <script src="js/player_movement_hints.js"></script>
     <script src="js/achievements_highscores.js"></script>
 
     <script src="js/dom_events.js"></script>
