fix: resize behavior
Made scaling of elements (figures, highlighting moves, player) on the board

Added scaling methods:
boardResize
resizePlayer
Piece.resize

Changed the representation of the pieces on the board:
moved the growth counter
direction of the pawn

Fix #93

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
             <div id="assets" style="display:none">
                 <!--insert images here -->
                 <!-- piece-images -->
-                <img src="images/bishop.svg" id="bishop" style="background: white" />
-                <img src="images/king.svg" id="king" style="background: white" />
-                <img src="images/knight.svg" id="knight" style="background: white" />
-                <img src="images/pawn.svg" id="pawn" style="background: white" />
-                <img src="images/queen.svg" id="queen" style="background: white" />
-                <img src="images/rook.svg" id="rook" style="background: white" />
-                <img src="images/wknight.svg" id="wknight" style="background: white" />
-                <img style='background:white' id='up_arrow' src='images/up_arrow.svg'>
-                <img style='background:white' id='down_arrow' src='images/down_arrow.svg'>
+                <img class="figure" src="images/bishop.svg" id="bishop" />
+                <img class="figure" src="images/king.svg" id="king" />
+                <img class="figure" src="images/knight.svg" id="knight" />
+                <img class="figure" src="images/pawn.svg" id="pawn" />
+                <img class="figure" src="images/queen.svg" id="queen" />
+                <img class="figure" src="images/rook.svg" id="rook" />
+                <img class="figure" src="images/wknight.svg" id="wknight" />
+                <img id='up_arrow' src='images/up_arrow.svg'>
+                <img id='down_arrow' src='images/down_arrow.svg'>
                 <!--end insert images -->
             </div>
         </div>
