Persist dark mode

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <div class="dark-mode">
         <label class="dark-mode-switch">
-            <input type="checkbox" onclick="switchDarkMode()">
+            <input type="checkbox">
             <span class="slider"></span>
         </label>
     </div>
@@ -203,7 +203,6 @@
         <h1> Move Timer: </h1>
         <progress value="0" max="2.5" id="timer-bar"></progress>
     </div>
-    <script>document.querySelector('.dark-mode-switch input').checked = false;</script>
     <script src="js/utils.js"></script>
     <script src="js/arcade.js"></script>
     <script src="js/piece_object.js"></script>
