Completly working code

--- a/index.html
+++ b/index.html
@@ -171,13 +171,18 @@
             
                 <div class="tab-content hidden" id="achievements" style="margin-top: 50px;">
                     <h2>Achievements</h2>
+                    <div class="achv" style="visibility: hidden;height:0px">
+                        <!--
+
+
+                        -->
+                    </div>
                     <div class="achievement-summary">
                         Achievements Unlocked: <span id="achievements-unlocked">0</span> /
                         <span id="achievements-total">0</span>
                     </div>
                     <div class="view-toggle">
                         <button id="viewByProgress">View by Progress</button>
-                        {% comment %} <button id="viewByCategory">View by Category</button> {% endcomment %}
                     </div>
                     
                     <div class="achievements-container">
